升级相关封装